--- a/netlify.toml
+++ b/netlify.toml
@@ -18,3 +18,13 @@ from = "https://www.links.djseanzie.com/*"
 to = "https://links.djseanzie.club/:splat"
 status = 301
 force = true
+[[redirects]]
+from = "https://spotify.djseanzie.com/*"
+to = "https://open.spotify.com/playlist/6dcgwhMSuUCO0U08QEcGxr?si=0419bc8c5cc74ec0"
+status = 301
+force = true
+[[redirects]]
+from = "https://www.spotify.djseanzie.com/*"
+to = "https://open.spotify.com/playlist/6dcgwhMSuUCO0U08QEcGxr?si=0419bc8c5cc74ec0"
+status = 301
+force = true
