--- a/netlify.toml
+++ b/netlify.toml
@@ -34,12 +34,12 @@ to = "https://open.spotify.com/playlist/6dcgwhMSuUCO0U08QEcGxr?si=0419bc8c5cc74e
 status = 301
 force = true
 [[redirects]]
-from = "https://www.spotify.djseanzie.club/*"
+from = "https://www.spotify.djseanzie.com/*"
 to = "https://open.spotify.com/playlist/6dcgwhMSuUCO0U08QEcGxr?si=0419bc8c5cc74ec0"
 status = 301
 force = true
 [[redirects]]
-from = "https://mixes.djseanzie.club/*"
+from = "https://mixes.djseanzie.com/*"
 to = "https://www.mixcloud.com/djseanzie/"
 status = 301
 force = true
