--- a/netlify.toml
+++ b/netlify.toml
@@ -34,12 +34,22 @@ to = "https://open.spotify.com/playlist/6dcgwhMSuUCO0U08QEcGxr?si=0419bc8c5cc74e
 status = 301
 force = true
 [[redirects]]
-from = "https://www.spotify.djseanzie.com/*"
+from = "https://www.spotify.djseanzie.club/*"
 to = "https://open.spotify.com/playlist/6dcgwhMSuUCO0U08QEcGxr?si=0419bc8c5cc74ec0"
 status = 301
 force = true
 [[redirects]]
 from = "https://mixes.djseanzie.com/*"
+to = "https://www.mixcloud.com/djseanzie/"
+status = 301
+force = true
+[[redirects]]
+from = "https://www.mixes.djseanzie.com/*"
+to = "https://www.mixcloud.com/djseanzie/"
+status = 301
+force = true
+[[redirects]]
+from = "https://mixes.djseanzie.club/*"
 to = "https://www.mixcloud.com/djseanzie/"
 status = 301
 force = true
@@ -75,6 +85,16 @@ status = 301
 force = true
 [[redirects]]
 from = "https://www.newestmixes.djseanzie.club/*"
+to = "https://www.mixcloud.com/djseanzie/seanzie-radio-episode-10/"
+status = 301
+force = true
+[[redirects]]
+from = "https://newestmix.djseanzie.com/*"
+to = "https://www.mixcloud.com/djseanzie/seanzie-radio-episode-10/"
+status = 301
+force = true
+[[redirects]]
+from = "https://www.newestmixes.djseanzie.com/*"
 to = "https://www.mixcloud.com/djseanzie/seanzie-radio-episode-10/"
 status = 301
 force = true
