--- a/netlify.toml
+++ b/netlify.toml
@@ -23,3 +23,13 @@ from = "https://spotify.djseanzie.club/*"
 to = "https://open.spotify.com/playlist/6dcgwhMSuUCO0U08QEcGxr?si=0419bc8c5cc74ec0"
 status = 301
 force = true
+[[redirects]]
+from = "https://mixes.djseanzie.com/*"
+to = "https://www.mixcloud.com/djseanzie/"
+status = 301
+force = true
+[[redirects]]
+from = "https://mixes.djseanzie.club/*"
+to = "https://www.mixcloud.com/djseanzie/"
+status = 301
+force = true
