--- a/netlify.toml
+++ b/netlify.toml
@@ -14,6 +14,11 @@ to = "https://links.djseanzie.club/:splat"
 status = 301
 force = true
 [[redirects]]
+from = "https://www.links.djseanzie.com/*"
+to = "https://links.djseanzie.club/:splat"
+status = 301
+force = true
+[[redirects]]
 from = "https://spotify.djseanzie.com/*"
 to = "https://open.spotify.com/playlist/6dcgwhMSuUCO0U08QEcGxr?si=0419bc8c5cc74ec0"
 status = 301
@@ -24,12 +29,72 @@ to = "https://open.spotify.com/playlist/6dcgwhMSuUCO0U08QEcGxr?si=0419bc8c5cc74e
 status = 301
 force = true
 [[redirects]]
+from = "https://www.spotify.djseanzie.com/*"
+to = "https://open.spotify.com/playlist/6dcgwhMSuUCO0U08QEcGxr?si=0419bc8c5cc74ec0"
+status = 301
+force = true
+[[redirects]]
+from = "https://www.spotify.djseanzie.club/*"
+to = "https://open.spotify.com/playlist/6dcgwhMSuUCO0U08QEcGxr?si=0419bc8c5cc74ec0"
+status = 301
+force = true
+[[redirects]]
 from = "https://mixes.djseanzie.com/*"
+to = "https://www.mixcloud.com/djseanzie"
+status = 301
+force = true
+[[redirects]]
+from = "https://www.mixes.djseanzie.club/*"
 to = "https://www.mixcloud.com/djseanzie"
 status = 301
 force = true
 [[redirects]]
 from = "https://mixes.djseanzie.club/*"
 to = "https://www.mixcloud.com/djseanzie"
+status = 301
+force = true
+[[redirects]]
+from = "https://www.mixes.djseanzie.club/*"
+to = "https://www.mixcloud.com/djseanzie"
+status = 301
+force = true
+[[redirects]]
+from = "https://live.djseanzie.com/*"
+to = "https://www.mixcloud.com/live/djseanzie"
+status = 301
+force = true
+[[redirects]]
+from = "https://www.live.djseanzie.club/*"
+to = "https://www.mixcloud.com/live/djseanzie"
+status = 301
+force = true
+[[redirects]]
+from = "https://live.djseanzie.club/*"
+to = "https://www.mixcloud.com/live/djseanzie"
+status = 301
+force = true
+[[redirects]]
+from = "https://www.live.djseanzie.club/*"
+to = "https://www.mixcloud.com/live/djseanzie"
+status = 301
+force = true
+[[redirects]]
+from = "https://newmix.djseanzie.com/*"
+to = "https://www.mixcloud.com/djseanzie/seanzie-radio-episode-10/"
+status = 301
+force = true
+[[redirects]]
+from = "https://www.newmix.djseanzie.club/*"
+to = "https://www.mixcloud.com/djseanzie/seanzie-radio-episode-10/"
+status = 301
+force = true
+[[redirects]]
+from = "https://newmix.djseanzie.club/*"
+to = "https://www.mixcloud.com/djseanzie/seanzie-radio-episode-10/"
+status = 301
+force = true
+[[redirects]]
+from = "https://www.newmix.djseanzie.club/*"
+to = "https://www.mixcloud.com/djseanzie/seanzie-radio-episode-10/"
 status = 301
 force = true
